# up-rust

./: .env.oft-current  .env.oft-latest  .gitignore  .gitmodules  .ort.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  NOTICE.md  PERSONAL_NOTE.md  README.adoc  README.md  about.hbs  about.toml  build.rs  cargo.ort.yml  curations.yml  deny.toml  resolutions.ort.yml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/scripts/: post-create.sh
.devcontainer/scripts/functions/: get-arch-and-os.sh  install-rust-toolchain.sh
.github/: dependabot.yml  release.yml
.github/actions/run-oft/: README.md  action.yaml  determine_java_executable.sh
.github/workflows/: README.md  build.yaml  check-and-lint.yaml  check-dependencies.yaml  check-up-spec-compatibility.yaml  check.yaml  check_dependencies.yaml  coverage.yaml  create-badges.yaml  current-up-spec-compliance.yaml  latest-up-spec-compatibility.yaml  license-report.yaml  lint-and-test.yaml  nightly.yaml  ocaas.yaml  release.yaml  requirements-tracing.yaml  test-featurematrix.yaml  test.yaml  up-spec-badge.yml  update-spec-compliance-badge.yaml  verify-latest-deps.yaml  verify-msrv.yaml  verify_msrv.yaml  x-build.yaml
docs/: README.md  build.MD  up-spec.MD
examples/: simple_notify.rs  simple_publish.rs  simple_rpc.rs  symphony_target.rs
features/uuid/: protobuf_serialization.feature
features/uuri/: protobuf_serialization.feature
proto/io/cloudevents/v1/: cloudevents.proto
reports/: lcov.info  results.xml
src/: cloudevents.rs  communication.rs  core.rs  lib.rs  listener_wrapper.rs  local_transport.rs  protobuf_mappable.rs  rpc.rs  serialization_error.rs  symphony.rs  uattributes.rs  ulistener.rs  umessage.rs  upayload.rs  uri.rs  ustatus.rs  utransport.rs  uuid.rs
src/cloudevent/: README.md  ucloudevent.rs  ucloudeventbuilder.rs
src/cloudevent/builder/: ucloudeventbuilder.rs  ucloudeventutils.rs
src/cloudevent/datamodel/: ucloudevent.rs  ucloudeventattributes.rs  ucloudeventtype.rs
src/cloudevent/serializer/: cloudeventjsonserializer.rs  cloudeventprotobufserializer.rs  cloudeventserializer.rs
src/cloudevent/validator/: cloudeventvalidator.rs  validationresult.rs
src/cloudevents/: cloudeventjsonserializer.rs  cloudeventprotobufserializer.rs  cloudeventserializer.rs  cloudeventvalidator.rs  ucloudeventattributes.rs  ucloudeventbuilder.rs  ucloudeventutils.rs
src/communication/: default_notifier.rs  default_pubsub.rs  in_memory_rpc_client.rs  in_memory_rpc_server.rs  in_memory_subscriber.rs  notification.rs  pubsub.rs  rpc.rs  rpc_impl.rs  simple_notifier.rs  simple_publisher.rs  udiscovery_client.rs  usubscription_client.rs
src/core/: udiscovery.rs  usubscription.rs  utwin.rs
src/core/udiscovery/: udiscovery_client.rs
src/core/usubscription/: usubscription_client.rs
src/proto/cloudevents/: protocloudevent.rs
src/proto/google/: protostatus.rs
src/proto/uprotocol/: uauthority.rs  uentity.rs  umessagetype.rs  upayload.rs  upriority.rs  uresource.rs  ustatus.rs  uuid.rs  uuri.rs
src/rpc/: README.md  calloptions.rs  rpcclient.rs  rpcmapper.rs  rpcresult.rs  rpcserver.rs
src/scripts/: coverage.sh
src/transport/: README.md  utransport.rs
src/transport/builder/: uattributesbuilder.rs  umessagebuilder.rs
src/transport/datamodel/: uattributes.rs  ulistener.rs  umessagetype.rs  upayload.rs  upriority.rs  userializationhint.rs  ustatus.rs  utransport.rs
src/transport/validator/: uattributesvalidator.rs
src/types/: parsingerror.rs  serializationerror.rs  ustatus.rs  validationerror.rs  validationresult.rs
src/uattributes/: uattributesvalidator.rs  umessagetype.rs  upayloadformat.rs  upriority.rs
src/umessage/: umessagebuilder.rs  umessagetype.rs
src/uri/: README.md  uauthority.rs  uentity.rs  uresource.rs  uresourcebuilder.rs  uurivalidator.rs
src/uri/builder/: resourcebuilder.rs
src/uri/datamodel/: uauthority.rs  uentity.rs  uresource.rs  uuri.rs
src/uri/serializer/: longuriserializer.rs  microuriserializer.rs  shorturiserializer.rs  uriserializer.rs
src/uri/validator/: urivalidator.rs
src/uuid/: README.md  uuidbuilder.rs  uuidutils.rs
src/uuid/builder/: uuidbuilder.rs  uuidutils.rs
src/uuid/serializer/: longuuidserializer.rs  microuuidserializer.rs  uuidserializer.rs
src/uuid/validator/: uuidvalidator.rs
tests/: tck_uuid.rs  tck_uuri.rs  uris.json  uuribuilder.rs
tests/common/: mod.rs
tests/features/: uuri_uri_serialization.feature
tools/: fmt_clippy_doc.sh  generate_test_coverage_report.sh
