################################################################################
# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
categories = ["api-bindings"]
description = "The Eclipse uProtocol Rust Language Library"
edition = "2021"
include = [
    "/build.rs",
    "/Cargo.toml",
    "/examples/*",
    "/proto/*",
    "/README.md",
    "/src/*",
    "/up-spec/up-core-api/uprotocol/*",
]
keywords = ["uProtocol", "SDK", "communication"]
license = "Apache-2.0"
name = "up-rust"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/up-rust"
rust-version = "1.82"
version = "0.6.0"

[features]
default = ["communication"]
cloudevents = []
communication = ["usubscription", "dep:thiserror", "tokio/sync", "tokio/time"]
udiscovery = []
usubscription = []
utwin = []
util = ["tokio/sync"]
test-util = ["mockall"]

[dependencies]
async-trait = { version = "0.1" }
bytes = { version = "1.10" }
mediatype = "0.20"
mockall = { version = "0.13", optional = true }
protobuf = { version = "3.7.2", features = ["with-bytes"] }
rand = { version = "0.9" }
thiserror = { version = "1.0.69", optional = true }
tokio = { version = "1.44", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
uriparse = { version = "0.6" }
uuid-simd = { version = "0.8", default-features = false, features = ["std", "detect"] }

[build-dependencies]
protobuf-codegen = { version = "3.7.2" }
protoc-bin-vendored = { version = "3.1" }

[dev-dependencies]
clap = { version = "4.5.40" }
cucumber = { version = "0.21.1", features = ["output-junit"] }
hex = { version = "0.4.3" }
mockall = { version = "0.13.1" }
test-case = { version = "3.3.1" }
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "simple_notify"
required-features = ["communication", "util"]

[[example]]
name = "simple_publish"
required-features = ["communication", "util"]

[[example]]
name = "simple_rpc"
required-features = ["communication", "util"]

[[test]]
name = "tck_uuri"
harness = false   # allows Cucumber to print output instead of libtest

[[test]]
name = "tck_uuid"
harness = false   # allows Cucumber to print output instead of libtest

[lints.rust]
# this prevents cargo from complaining about code blocks
# excluded from tarpaulin coverage checks
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
