################################################################################
# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
categories = ["api-bindings"]
description = "The Eclipse uProtocol Rust Language Library"
edition = "2021"
include = [
    "/build.rs",
    "/Cargo.toml",
    "/examples/*",
    "/proto/*",
    "/README.md",
    "/src/*",
    "/up-spec/up-core-api/uprotocol/*",
]
keywords = ["uProtocol", "SDK", "communication"]
license = "Apache-2.0"
name = "up-rust"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/up-rust"
rust-version = "1.88"
version = "0.10.0-SNAPSHOT"

[features]
default = []
cloudevents = ["protobuf-support"]
communication = [
    "up-l2-notifier",
    "up-l2-publisher",
    "up-l2-subscriber",
    "up-l2-rpc-client",
    "up-l2-rpc-server",
]
protobuf-support = ["dep:protobuf"]
symphony = ["up-l2-rpc-server", "dep:serde", "dep:serde_json", "dep:symphony"]
test-util = ["dep:mockall"]
up-core-types = ["protobuf-support"]
up-l2-api = ["dep:thiserror"]
up-l2-notifier = ["up-l2-api"]
up-l2-publisher = ["up-l2-api"]
up-l2-subscriber = ["up-l2-api", "usubscription"]
up-l2-rpc-client = ["up-l2-api", "up-core-types", "tokio/sync", "tokio/time"]
up-l2-rpc-server = ["up-l2-api", "up-core-types", "tokio/sync", "tokio/time"]
udiscovery = ["up-l2-rpc-client"]
usubscription = ["up-l2-rpc-client"]
util = ["tokio/sync"]

[dependencies]
async-trait = { version = "0.1" }
bytes = { version = "1.11.1" }
mediatype = "0.20"
mockall = { version = "0.13", optional = true }
protobuf = { version = "3.7.2", features = ["with-bytes"], optional = true }
rand = { version = "0.10.1" }
regex = { version = "1.11" }
serde = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.150", optional = true }
symphony = { version = "0.1.5", optional = true }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.45.1", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
uriparse = { version = "0.6" }
uuid-simd = { version = "0.8", default-features = false, features = ["std", "detect"] }

[build-dependencies]
protobuf-codegen = { version = "3.7.2" }
protoc-bin-vendored = { version = "3.2" }

[dev-dependencies]
clap = { version = "4.6.1" }
cucumber = { version = "0.23.0", features = ["output-junit"] }
hex = { version = "0.4.3" }
mockall = { version = "0.13.1" }
test-case = { version = "3.3.1" }
time = { version = "0.3.47" }
tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
denylist = ["test-util"]
skip_feature_sets = [
    # the features on the left side include the features on the right side,
    # so there is no need to test them together
    ["up-core-types", "protobuf-support"],
    ["cloudevents", "protobuf-support"],
    ["symphony", "up-l2-rpc-server"],
    ["symphony", "up-l2-api"],
    ["communication", "up-l2-notifier"],
    ["communication", "up-l2-publisher"],
    ["communication", "up-l2-subscriber"],
    ["communication", "up-l2-rpc-client"],
    ["communication", "up-l2-rpc-server"],
    ["communication", "up-l2-api"],
    ["communication", "up-core-types"],
    ["communication", "protobuf-support"],
    ["communication", "usubscription"],
    ["up-l2-notifier", "up-l2-api"],
    ["up-l2-publisher", "up-l2-api"],
    ["up-l2-subscriber", "up-l2-api"],
    ["up-l2-subscriber", "usubscription"],
    ["up-l2-subscriber", "up-l2-rpc-client"],
    ["up-l2-subscriber", "up-core-types"],
    ["up-l2-rpc-client", "up-l2-api"],
    ["up-l2-rpc-client", "up-core-types"],
    ["up-l2-rpc-client", "protobuf-support"],
    ["up-l2-rpc-server", "up-l2-api"],
    ["up-l2-rpc-server", "up-core-types"],
    ["up-l2-rpc-server", "protobuf-support"],
    ["usubscription", "up-l2-rpc-client"],
    ["usubscription", "up-l2-api"],
    ["usubscription", "up-core-types"],
    ["usubscription", "protobuf-support"],
    ["udiscovery", "up-l2-rpc-client"],
    ["udiscovery", "up-l2-api"],
    ["udiscovery", "up-core-types"],
    ["udiscovery", "protobuf-support"],
]
# optional dependencies are activated by means of features only
skip_optional_dependencies = true
max_combination_size = 3

[[example]]
name = "simple_notify"
required-features = ["up-l2-notifier", "util"]

[[example]]
name = "simple_publish"
required-features = ["up-l2-publisher", "protobuf-support", "util"]

[[example]]
name = "simple_rpc"
required-features = ["up-l2-rpc-client", "up-l2-rpc-server", "util"]

[[example]]
name = "symphony_target"
required-features = ["symphony", "up-l2-rpc-client", "up-l2-rpc-server", "util"]

[[test]]
name = "tck_uuri"
harness = false                       # allows Cucumber to print output instead of libtest
required-features = ["up-core-types"]

[[test]]
name = "tck_uuid"
harness = false                       # allows Cucumber to print output instead of libtest
required-features = ["up-core-types"]

[lints.rust]
# this prevents cargo from complaining about code blocks
# excluded from tarpaulin coverage checks
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
# see https://corrode.dev/blog/defensive-programming/#clippy-lints-for-defensive-programming
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "allow"
